--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
                             technologies.</li>
 
                         <li><strong>Solved 560+ problems </strong> on Leetcode <strong>(Highest rating : 1486)</strong>
-                            <strong>Handel :</strong> <a href="https://leetcode.com/u/Abhishek_5165/"
+                            <strong>Handle :</strong> <a href="https://leetcode.com/u/Abhishek_5165/"
                                 target="_blank">@Abhishek5165</a>
                         </li>
 
-                        <li><strong>2 ⭐ </strong> on Codechef <strong>(Highest rating : 1520)</strong> <strong>Handel
+                        <li><strong>2 ⭐ </strong> on Codechef <strong>(Highest rating : 1520)</strong> <strong>Handle
                                 :</strong> <a href="https://www.codechef.com/users/abhishek_105"
                                 target="_blank">@Abhishek_105</a></li>
 
-                        <li>Solved <strong>160+ Problems</strong> on Codeforces <strong>Handel :</strong> <a
+                        <li>Solved <strong>160+ Problems</strong> on Codeforces <strong>Handle :</strong> <a
                                 href="https://codeforces.com/profile/Abhi1310" target="_blank">@Abhi1310</a></li>
 
                         <li>Sequred <strong>global rank of 344</strong> in CodeChef Starters 126 in the month of march
@@ -173,7 +173,7 @@
                                 Algouniversity.</strong></li>
 
                         <li><strong>Expert</strong> at Code Studio, <strong> Solved 275+ problems (Highest rating :
-                                1854)</strong> <strong> <br>Handel :</strong> <a
+                                1854)</strong> <strong> <br>Handle :</strong> <a
                                 href="https://www.naukri.com/code360/profile/Abhishek_1320"
                                 target="_blank">@Abhishek1320</a></li>
 
