--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             to checkout for <b>payment processing.</b></li>
                         <li><strong>Technologies used : </strong> Core PHP, CSS, PHP mailer library, Mysql
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
-                                target="_blank" href="https://predicant-protectio.000webhostapp.com/">Project Link</a>
+                                target="_blank" href="https://github.com/Abhishek5165/Abhisheks_Shopping_Cart">Project Link</a>
                         </li>
                     </ul>
 
